After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 756943 - EphyFileChooser is broken
EphyFileChooser is broken
Status: RESOLVED FIXED
Product: epiphany
Classification: Core
Component: Interface
3.18.x (obsolete)
Other Linux
: Normal normal
: ---
Assigned To: Epiphany Maintainers
Epiphany Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-10-22 04:44 UTC by Arnaud B.
Modified: 2015-10-26 15:55 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Screenshot. (114.43 KB, image/png)
2015-10-22 04:46 UTC, Arnaud B.
  Details
ephy-file-chooser: Don't show a blank preview widget (1011 bytes, patch)
2015-10-26 03:27 UTC, Michael Catanzaro
committed Details | Review

Description Arnaud B. 2015-10-22 04:44:49 UTC
The custom FileChooser, EphyFileChooser, is broken when you try to “Save as…” or from the Preferences dialog to set your Downloads’ folder (and maybe elsewhere, but not for “Open…”). It shows at the right of the list file an empty grey area, instead of showing at the bottom a custom widget.
Comment 1 Arnaud B. 2015-10-22 04:46:19 UTC
Created attachment 313836 [details]
Screenshot.
Comment 2 Michael Catanzaro 2015-10-26 03:23:19 UTC
I wonder if this is a behavior change in GTK+.
Comment 3 Michael Catanzaro 2015-10-26 03:24:24 UTC
Hit Enter too soon. "I wonder if this is a behavior change in GTK+," but Epiphany uses a blank GtkImage as the preview widget, which is probably wrong. The bug goes away if we don't do that.
Comment 4 Michael Catanzaro 2015-10-26 03:27:13 UTC
Created attachment 314110 [details] [review]
ephy-file-chooser: Don't show a blank preview widget

The preview widget is initially empty, so don't show it until after an
image has been selected.
Comment 5 Michael Catanzaro 2015-10-26 15:55:42 UTC
Attachment 314110 [details] pushed as 62960ba - ephy-file-chooser: Don't show a blank preview widget