ephy-file-chooser: Don't show a blank preview widget

The preview widget is initially empty, so don't show it until after an
image has been selected.

https://bugzilla.gnome.org/show_bug.cgi?id=756943